# aiodkelpris

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
aiodkelpris/: pris.py
aiodkelpris/core/: const.py
aioelpris/: __init__.py  pris.py
aioelpris/core/: const.py  models.py
tests/: test_aioelpris.py  test_call_api.py
tests/mocks/: getElspotprices.json
