[tool.poetry]
name = "aioelpris"
version = "0.2.0"
description = "An aio library to retrieve some Nordic countries current electricity price."
authors = ["Alejandro González Pérez <8874974+dansmachina@users.noreply.github.com>"]
license = "Apache License"
readme = "README.md"
repository = "https://github.com/dansmachina/aioelpris"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
aiohttp = "^3.8.4"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = "^3.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"
pytest-asyncio = "^0.21.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line_length = 88
target_version = ["py39"]

[tool.coverage.run]
branch = true
source = ["aioelpris"]

[tool.coverage.paths]
source = ["aioelpris/"]

[tool.coverage.report]
fail_under = 75
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
minversion = 6.0
testpaths = "tests"
asyncio_mode = "strict"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
